--- a/about.html
+++ b/about.html
@@ -23,12 +23,12 @@
                     <div class="my-col-left2">
                         <div class="main">
                             <div class="sub">
-                                <img src="img/IMG_3852.JPG" alt="">
+                                <img class="" src="img/IMG_3852.JPG" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 p-5">
                     <div class="my-col-right2">
                         <!-- this div is only for animation -->
                         <div class="rotate-area4">
