--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container">
         <div class="myCont2">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-12 col-md-6">
                     <div class="my-col-left2">
                         <div class="main">
@@ -41,8 +41,6 @@
                                 libero inventore, non asperiores dicta itaque tempore iure labore eius porro vel, et
                                 odio mollitia ipsum, quia rem soluta?Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Laboriosam enim assumenda, quam saepe, non esse consequatur cumque
-                                minima velit, dolorem ea quo et consectetur! Adipisci officia quidem veniam corrupti
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa sunt praesentium
                                 aperiam nemo incidunt officiis molestias vero voluptatum delectus iste, autem ut qui
                                 nihil omnis at, libero eum mollitia vitae!</p>
                             <div class="bTn">
