--- a/skill.html
+++ b/skill.html
@@ -102,6 +102,24 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-12 col-md-6">
+                                    <span>React</span>
+                                    <div class="progress skill-bar">
+                                        <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="20"
+                                            aria-valuemin="0" aria-valuemax="100">
+    
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <span>Git</span>
+                                    <div class="progress skill-bar">
+                                        <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="20"
+                                            aria-valuemin="0" aria-valuemax="100">
+    
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
