--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-12 col-md-6">
 
                         <!-- canvas area start  -->
-                        <canvas width="400" height="409" class="float-end"  id="myCanvas">
+                        <canvas width="400" height="409" class="float-end" id="myCanvas">
                             <ul>
                                 <li><a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML 5</a></li>
                                 <li><a data-weight="25" href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets"
@@ -53,15 +53,15 @@
                                 </li>
                                 <li><a data-weight="19" href="https://en.wikipedia.org/wiki/MySQL"
                                         target="_blank">mySQl</a></li>
-                                <li><a data-weight="19" href="https://en.wikipedia.org/wiki/MySQL" target="_blank">Webapp</a></li>
+                                <li><a data-weight="19" href="https://en.wikipedia.org/wiki/MySQL"
+                                        target="_blank">Webapp</a></li>
                                 <li><a data-weight="26" href="https://en.wikipedia.org/wiki/WordPress"
                                         target="_blank">Bootstrap 5</a></li>
                                 <li><a data-weight="17" href="https://en.wikipedia.org/wiki/Git" target="_blank">Git</a>
                                 </li>
                                 <li><a data-weight="17" href="https://en.wikipedia.org/wiki/WooCommerce"
                                         target="_blank">Photopea</a></li>
-                                <li><a data-weight="17" href="https://en.wikipedia.org/wiki/GitHub" target="_blank">Git
-                                        Hub</a></li>
+                                <li><a data-weight="17" href="https://en.wikipedia.org/wiki/GitHub" target="_blank">Git Hub</a></li>
                                 <li><a data-weight="17" href="https://en.wikipedia.org/wiki/User_interface_design"
                                         target="_blank">React</a></li>
                                 <li><a data-weight="17" href="https://en.wikipedia.org/wiki/User_experience_design"
@@ -69,11 +69,11 @@
                                 <li><a data-weight="13" href="https://en.wikipedia.org/wiki/XML" target="_blank">XML</a>
                                 </li>
                                 <li><a data-weight="13" href="https://en.wikipedia.org/wiki/Mailchimp"
-                                        target="_blank">CMD</a></li>
+                                        target="_blank">Tailwind</a></li>
                                 <li><a data-weight="24" href="https://en.wikipedia.org/wiki/Adobe_XD"
                                         target="_blank">Adobe XD</a></li>
                                 <li><a data-weight="24" href="https://en.wikipedia.org/wiki/Adobe_Photoshop"
-                                        target="_blank">Adobe Photoshop</a></li>
+                                        target="_blank">Ad.Ph.shop</a></li>
                                 <li><a data-weight="21" href="https://en.wikipedia.org/wiki/Node.js"
                                         target="_blank">Figma</a></li>
                                 <li><a data-weight="19" href="https://www.npmjs.com/" target="_blank">npm</a></li>
