--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
                                         target="_blank">Webapp</a></li>
                                 <li><a data-weight="26" href="https://en.wikipedia.org/wiki/WordPress"
                                         target="_blank">Bootstrap 5</a></li>
-                                <li><a data-weight="17" href="https://en.wikipedia.org/wiki/Git" target="_blank">Git</a>
                                 </li>
                                 <li><a data-weight="17" href="https://en.wikipedia.org/wiki/WooCommerce"
                                         target="_blank">Photopea</a></li>
-                                <li><a data-weight="17" href="https://en.wikipedia.org/wiki/GitHub" target="_blank">Git Hub</a></li>
+                                <li><a data-weight="17" href="https://en.wikipedia.org/wiki/GitHub" target="_blank">Git</a></li>
                                 <li><a data-weight="17" href="https://en.wikipedia.org/wiki/User_interface_design"
                                         target="_blank">React</a></li>
                                 <li><a data-weight="17" href="https://en.wikipedia.org/wiki/User_experience_design"
