--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div id="cursor" class="d-flex align-items-center justify-content-center">
+        <div class="dot"></div>
+    </div>
     <div class="section1">
         <div class="container">
             <div class="myCont1">
@@ -104,6 +107,7 @@
     </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="https://www.goat1000.com/jquery.tagcanvas.min.js"></script>
+    <script src="js/cursor.js"></script>
     <script src="js/jQery.js"></script>
 </body>
 
