--- a/skill.html
+++ b/skill.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-
+    <div id="cursor" class="d-flex align-items-center justify-content-center">
+        <div class="dot"></div>
+    </div>
     <!-- this div is only for animation -->
     <div class="rotate-area3">
         <img src="img/Group 54.png" alt="">
@@ -245,6 +247,7 @@
     </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="js/bar.js"></script>
+    <script src="js/cursor.js"></script>
     <script src="js/script.js"></script>
 </body>
 
