--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <div id="cursor" class="d-flex align-items-center justify-content-center">
+        <div class="dot"></div>
+    </div>
 <div class="about-area">
     <div class="about">
         <h3>About Me</h3>
@@ -72,6 +75,8 @@
 
 <script src="https://kit.fontawesome.com/b7ab4b2e5e.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="js/cursor.js"></script>
+
 </body>
 
 </html>
