--- a/skill.html
+++ b/skill.html
@@ -208,12 +208,10 @@
                                     <div class="pora">
                                         <h3>Secondiary School Certificate(SSC)</h3>
                                         <h4>Saint Philips High School & College(2007-2012)</h4>
-                                        <h5>GPA-5.00</h5>
                                     </div>
                                     <div class="pora">
                                         <h3>Higher Secondiary School Certificate(HSC)</h3>
                                         <h4>Notre Dame College(2012-2014)</h4>
-                                        <h5>GPA-4.80</h5>
                                     </div>
                                     <div class="pora">
                                         <h3>Bachelor Of Science(B.Sc)</h3>
@@ -224,10 +222,15 @@
                             </div>
                         </div>
                     </div>
-                </div>-->
+
+                    <div class="col-md-12">
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
     <div class="pages">
         <div class="container">
             <div class="col-md-12">
