--- a/about.html
+++ b/about.html
@@ -39,13 +39,8 @@
                         </div>
                         <!-- this div is only for animation -->
                         <div class="about-text">
-                            <h2>A small details about me</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi omnis voluptates
-                                libero inventore, non asperiores dicta itaque tempore iure labore eius porro vel, et
-                                odio mollitia ipsum, quia rem soluta?Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Laboriosam enim assumenda, quam saepe, non esse consequatur cumque
-                                aperiam nemo incidunt officiis molestias vero voluptatum delectus iste, autem ut qui
-                                nihil omnis at, libero eum mollitia vitae!</p>
+                            <h2 class="aqua">A small details about me</h2>
+                            <p>I am bipul chandro roy.i have been working this sector for one year.I gathered knowledge from various kind of sources about development.My day starts with coding first and i am very passionate about it.Whatever i do...i try to bring perfection.I make front side of a website with html css bootstrap/tailwind javascript and react.Wherever & whatever i learn i always try to apply it to make me update and creative </p>
                             <div class="bTn">
                                 <button><a target="_blank" href="https://drive.google.com/file/d/175FnVFwQm6q6juE84K7zTrops-QyUGra/view?usp=sharing">Download Cv</a></button><button><a href="#">Hire Me</a></button>
                             </div>
