--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <div class="my-md-left1">
                             <div class="heading">
                                 <p>Hello</p>
-                                <h1>I'm Bipul Chandro Roy</h1>
-                                <h2>Web Designer & Developer</h2>
+                                <h1 class="aqua">I'm Bipul Chandro Roy</h1>
+                                <h2 class="aqua">Web Designer & Developer</h2>
                                 <button><a href="#">More About Me</a></button>
                             </div>
                         </div>
