--- a/skill.html
+++ b/skill.html
@@ -8,6 +8,7 @@
     <title>bip6.1.0.4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/card.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -29,7 +30,7 @@
                         <li><input id="sk" type="button" value="Skills"></li>
                         <li><input id="ex" type="button" value="Experience"></li>
                         <li><input id="edU" type="button" value="Education"></li>
-                        <li><input id="act" type="button" value="Activity"></li>
+                        <li><input id="focus" type="button" value="Feature"></li>
                     </ul>
                 </div>
                 <div class="row">
@@ -224,7 +225,38 @@
                     </div>
 
                     <div class="col-md-12">
-
+                        <div id="expert" class="px-5">
+                            <h2 class="pt-5 mt-5 aqua text-center">What i care about</h2>
+                                <div class="row">
+                                    <div class="col-12 col-md-4 p-5">
+                                        <div class="shadow-lg singleCard py-3 m-2 forHover">
+                                            <i class="text-light fs-custom fas fa-tools"></i>
+                                            <h2 class="text-light">Perfection</h2>
+                                            <span class="subDiv p-4">
+                                                <p class="lh-lg text-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita exercitationem</p>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-4 p-5">
+                                        <div class="shadow-lg singleCard py-3 m-2 forHover">
+                                            <i class="text-light fs-custom fas fa-award"></i>
+                                            <h2 class="text-light">Unique</h2>
+                                            <span class="subDiv p-4">
+                                                <p class="lh-lg text-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita exercitationem</p>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-4 p-5">
+                                        <div class="shadow-lg singleCard py-3 m-2 forHover">
+                                            <i class="text-light fs-custom fas fa-photo-video"></i>
+                                            <h2 class="text-light">Responsive</h2>
+                                            <span class="subDiv p-4">
+                                                <p class="lh-lg text-dark">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita exercitationem</p>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
                     </div>
                 </div>
             </div>
