--- a/about.html
+++ b/about.html
@@ -41,8 +41,9 @@
                         <div class="about-text">
                             <h2 class="aqua">A small details about me</h2>
                             <p>I am bipul chandro roy.i have been working this sector for one year.I gathered knowledge from various kind of sources about development.My day starts with coding first and i am very passionate about it.Whatever i do...i try to bring perfection.I make front side of a website with html css bootstrap/tailwind javascript and react.Wherever & whatever i learn i always try to apply it to make me update and creative </p>
-                            <div class="bTn">
-                                <button><a target="_blank" href="https://drive.google.com/file/d/175FnVFwQm6q6juE84K7zTrops-QyUGra/view?usp=sharing">Download Cv</a></button><button><a href="#">Hire Me</a></button>
+                            <div class="mt-4">
+                                <a class="me-3 aqua shadow-lg border py-2 px-3 border-dark rounded-pill" target="_blank" href="https://drive.google.com/file/d/175FnVFwQm6q6juE84K7zTrops-QyUGra/view?usp=sharing">Download Cv</a>
+                                <a class="me-3 aqua shadow-lg border py-2 px-3 border-dark rounded-pill" href="#">Send a Mail</a>
                             </div>
                         </div>
                     </div>
