--- a/skill.html
+++ b/skill.html
@@ -270,7 +270,7 @@
                     <li><a href="index.html"><i class="fas fa-house-damage"></i></a></li>
                     <li><a href="about.html"><i class="fas fa-address-card"></i></a></li>
                     <li><a href="skill.html"><i class="fas fa-book-reader"></i></a></li>
-                    <li><a href="#"><i class="fas fa-skull"></i></a></li>
+                    <li><a href="projects.html"><i class="fas fa-skull"></i></a></li>
                 </ul>
             </div>
         </div>
