--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,7 @@
                         <li class=""><a class="aqua" target="_blank" href="https://sbipul.github.io/Honda-site/">Honda ecommerce</a></li>
                         <li class=""><a class="aqua" target="_blank" href="https://sbipul.github.io/P6.1.0.4/">Portfolio</a></li>
                         <li class=""><a class="aqua" target="_blank" href="https://sbipul.github.io/paperTree-Assignment/">Paper Tree</a></li>
+                        <li class=""><a class="aqua" target="_blank" href="https://sbipul.github.io/bank-app/">Bank-transaction-app</a></li>
                     </ol>
                 </div>
             </div>
@@ -59,17 +60,18 @@
                         <li class=""><a class="aqua" target="_blank">Restaurent Shedule <br> <span class="text-success">html:5,css3,bootstrap5,javascript</span></a></li><br>
                         <li class=""><a class="aqua" target="_blank">Agency template <br> <span class="text-success">html:5,css3,bootstrap4</span></a></li><br>
                         <li class=""><a class="aqua" target="_blank">IMDB landing page clone <br> <span class="text-success">html:5,css3,bootstrap5</span></a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Grocery</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Panda ecommerce</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Student management <br> web app(user:admin,pass:admin)</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Business Website</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Ladies Ecommerce</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Sports</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Blogs</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Chatbot{raw js}</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Honda ecommerce</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Portfolio</a></li><br>
-                        <li class=""><a class="aqua" target="_blank">Paper Tree</a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Grocery<br> <span class="text-success">html:5,css3,bootstrap5</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Panda ecommerce<br> <span class="text-success">html:5,css3,bootstrap5</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Student management <br> web app(user:admin,pass:admin)<br> <span class="text-success">html:5,css3,bootstrap5,SQL,php,javascript</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Business Website<br> <span class="text-success">html:5,css3,bootstrap5</span><br> <span class="text-success">html:5,css3,bootstrap5,jquery,javascript</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Ladies Ecommerce<br> <span class="text-success">html:5,css3,bootstrap4,jquery</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Sports<br> <span class="text-success">html:5,css3,bootstrap5</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Blogs<br> <span class="text-success">html:5,css3,bootstrap5</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Chatbot{raw js}<br> <span class="text-success">html:5,css3,bootstrap5,javascript</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Honda ecommerce<br> <span class="text-success">html:5,css3,bootstrap5</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Portfolio<br> <span class="text-success">html:5,css3,bootstrap5,javascript</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Paper Tree<br> <span class="text-success">html:5,css3,bootstrap5,jquery,javascript</span></a></li><br>
+                        <li class=""><a class="aqua" target="_blank">Bank-transaction-app<br> <span class="text-success">html:5,css3,bootstrap5,javascript</span></a></li><br>
                     </ol>
                 </div>
             </div>
